# zed-tree-sitter-yaml

./: package.json
bindings/rust/: lib.rs
dialects/ansible/: Cargo.toml  Makefile  grammar.js  package.json
dialects/ansible/bindings/go/: go.mod
dialects/ansible/bindings/node/: binding.cc
dialects/ansible/bindings/python/tree_sitter_ansible/: __init__.py  binding.c
dialects/ansible/bindings/rust/: build.rs
dialects/ansible/bindings/swift/TreeSitterAnsible/: ansible.h
dialects/ansible/src/: parser.c
dialects/src/: grammar.json
dialects/tree-sitter-ansible/: Package.swift  binding.gyp  grammar.js  pyproject.toml  setup.py
dialects/tree-sitter-ansible/bindings/c/: tree-sitter-ansible.pc.in
dialects/tree-sitter-ansible/bindings/go/: binding.go  binding_test.go
dialects/tree-sitter-ansible/bindings/rust/: lib.rs
dialects/tree-sitter-ansible/src/: scanner.c
